--- a/ch-1.html
+++ b/ch-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapter 1</title>
+    <title>Ch-1</title>
 </head>
 <body>
     <h1>Main Heading</h1>
