--- a/ch-13.html
+++ b/ch-13.html
@@ -25,6 +25,7 @@
         }
         .m{
             margin-left:20px;
+            padding:10px;
         }
         .second{
             margin-left:-200px;
