--- a/final.html
+++ b/final.html
@@ -105,31 +105,25 @@
         <div class="se">
             <ul class="ser">
                 <li><i class="fas fa-3x fa-star star up" style="color:red"></i></li>
-                <li class="setting"><h1>BRANDING</h1></li>
+                <li class="setting"><h2>WEB DESIGNING</h2></li>
                 <li class="setting set"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente iure ipsam voluptate eligendi quas quis inventore nulla consectetur modi!</p></li>
                 <li class="setting"><a href="#">read more</a></li>
             </ul>
             <ul class="ser">
                 <li><i class="fas fa-3x fa-star star up" style="color:red"></i></li>
-                <li class="setting"><h1>BRANDING</h1></li>
+                <li class="setting"><h2>GRAPHIC DESIGNING</h2></li>
                 <li class="setting set"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente iure ipsam voluptate eligendi quas quis inventore nulla consectetur modi!</p></li>
                 <li class="setting"><a href="#">read more</a></li>
             </ul>
             <ul class="ser">
                 <li><i class="fas fa-3x fa-star star up" style="color:red"></i></li>
-                <li class="setting"><h1>BRANDING</h1></li>
+                <li class="setting"><h2>BRANDING</h2></li>
                 <li class="setting set"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente iure ipsam voluptate eligendi quas quis inventore nulla consectetur modi!</p></li>
                 <li class="setting"><a href="#">read more</a></li>
             </ul>
             <ul class="ser">
                 <li><i class="fas fa-3x fa-star star up" style="color:red"></i></li>
-                <li class="setting"><h1>BRANDING</h1></li>
-                <li class="setting set"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente iure ipsam voluptate eligendi quas quis inventore nulla consectetur modi!</p></li>
-                <li class="setting"><a href="#">read more</a></li>
-            </ul>
-            <ul class="ser seri">
-                <li><i class="fas fa-3x fa-star star up" style="color:red"></i></li>
-                <li class="setting"><h1>BRANDING</h1></li>
+                <li class="setting"><h2>MARKETING</h2></li>
                 <li class="setting set"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sapiente iure ipsam voluptate eligendi quas quis inventore nulla consectetur modi!</p></li>
                 <li class="setting"><a href="#">read more</a></li>
             </ul>
